--- a/src/client/app/todos/todos.html
+++ b/src/client/app/todos/todos.html
@@ -1,5 +1,5 @@
-<div class="well" ng-controller="Todos">
-	<span>{{content}}</span>
+<div class="well">
+	<span>{{vm.content}}</span>
 
 	<div>
 		<a href="/task">Task</a>
