--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,16 +3,19 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>To Do List</title>
-	<!--<base href="/" />-->
+	<base href="/" />
 
-	<!--<link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>-->
-	<!--<link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap-theme.css"/>-->
-
+	<!-- build:css styles/lib.css -->
 	<!-- bower:css -->
 	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
 	<!-- endbower -->
+	<!-- endbuild -->
 
-	<link rel="stylesheet" href="../../tmp/styles.css"/>
+	<!-- build:css styles/app.css-->
+	<!-- inject:css -->
+	<link rel="stylesheet" href="/tmp/styles.css">
+	<!-- endinject -->
+	<!-- endbuild -->
 </head>
 <body>
 
@@ -20,38 +23,32 @@
 	<div class="ng-view"></div>
 </div>
 
-
-<!--<script src="../../bower_components/angular/angular.js"></script>-->
-<!--<script src="../../bower_components/angular-route/angular-route.js"></script>-->
-<!--<script src="app/app.module.js"></script>-->
-
+<!-- build:js js/lib.js -->
 <!-- bower:js -->
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/angular/angular.js"></script>
 <script src="/bower_components/angular-route/angular-route.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <!-- endbower -->
+<!-- endbuild -->
+
+<!-- build:js js/app.js-->
 
 <!-- inject:js -->
 <script src="/src/client/app/app.module.js"></script>
+<script src="/src/client/app/core/core.module.js"></script>
 <script src="/src/client/app/task/task.module.js"></script>
 <script src="/src/client/app/todos/todos.module.js"></script>
-<script src="/src/client/app/task/config.route.js"></script>
 <script src="/src/client/app/task/task.js"></script>
-<script src="/src/client/app/todos/config.route.js"></script>
+<script src="/src/client/app/task/task.route.js"></script>
 <script src="/src/client/app/todos/todos.js"></script>
+<script src="/src/client/app/todos/todos.route.js"></script>
 <!-- endinject -->
 
-<!--To Dos-->
-<!--<script src="app/todos/todos.module.js"></script>-->
-<!--<script src="app/todos/config.route.js"></script>-->
-<!--<script src="app/todos/todos.js"></script>-->
+<!-- inject:templates:js -->
+<!-- endinject -->
 
-<!--task-->
-<!--<script src="app/task/task.module.js"></script>-->
-<!--<script src="app/task/config.route.js"></script>-->
-<!--<script src="app/task/task.js"></script>-->
-
+<!-- endbuild -->
 
 </body>
 </html>
