--- a/src/client/app/task/task.html
+++ b/src/client/app/task/task.html
@@ -1,3 +1,3 @@
 <div class="well">
-	<button class="btn" ng-click="btnClick()">{{someVal}}</button>
+	<button class="btn" ng-click="btnClick()">{{vm.someVal}}</button>
 </div>
