--- a/src/client/specs.html
+++ b/src/client/specs.html
@@ -31,6 +31,10 @@
 <div id="mocha"></div>
 
     <!-- inject:testlibraries:js -->
+    <script src="/node_modules/mocha/mocha.js"></script>
+    <script src="/node_modules/chai/chai.js"></script>
+    <script src="/node_modules/mocha-clean/index.js"></script>
+    <script src="/node_modules/sinon-chai/lib/sinon-chai.js"></script>
     <!-- endinject -->
 
     <script>
@@ -41,18 +45,42 @@
     </script>
 
     <!-- bower:js -->
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endbower -->
 
     <!-- inject:js -->
+   
+    <script src="/src/client/app/app.module.js"></script>
+   
+    <script src="/src/client/app/core/core.module.js"></script>
+   
+    <script src="/src/client/app/task/task.module.js"></script>
+   
+    <script src="/src/client/app/todos/todos.module.js"></script>
+   
+    <script src="/src/client/app/task/task.js"></script>
+   
+    <script src="/src/client/app/task/task.route.js"></script>
+   
+    <script src="/src/client/app/todos/todos.js"></script>
+   
+    <script src="/src/client/app/todos/todos.route.js"></script>
+   
     <!-- endinject -->
 
     <!-- inject:spechelpers:js -->
+    <script src="/src/client/test-helpers/bind-polyfill.js"></script>
     <!-- endinject -->
 
     <!-- inject:specs:js -->
+    <script src="/src/client/app/todos/todos.route.spec.js"></script>
     <!-- endinject -->
 
     <!-- inject:templates:js -->
+    <script src="/tmp/templates.js"></script>
     <!-- endinject -->
 
     <script>
