--- a/src/client/index.html
+++ b/src/client/index.html
@@ -45,12 +45,15 @@
 <script src="/src/client/app/layout/layout.module.js"></script>
 <script src="/src/client/app/task/task.module.js"></script>
 <script src="/src/client/app/todos/todos.module.js"></script>
+<script src="/src/client/app/playground/playground.module.js"></script>
 <script src="/src/client/app/core/config.js"></script>
 <script src="/src/client/app/layout/shell.js"></script>
 <script src="/src/client/app/task/task.js"></script>
 <script src="/src/client/app/task/task.route.js"></script>
 <script src="/src/client/app/todos/todos.js"></script>
 <script src="/src/client/app/todos/todos.route.js"></script>
+<script src="/src/client/app/playground/playground.js"></script>
+<script src="/src/client/app/playground/playground.route.js"></script>
 <!-- endinject -->
 
 <!-- inject:templates:js -->
