--- a/src/client/app/playground/playground.html
+++ b/src/client/app/playground/playground.html
@@ -162,4 +162,12 @@
 		<pg-current-time time-format="vm.timeFormat" parent-popup="vm.myPopup()"></pg-current-time>
 	</div>
 
+	<div class="three-column">
+		<br/>
+		<div class="column-display">1st {{vm.columnContent}} 1st END </div>
+		<div class="column-display">2nd {{vm.columnContent}} 2nd END </div>
+		<div class="column-display">3rd {{vm.columnContent}} 3rd END </div>
+	</div>
+
+	<!--<div class="my-animation"></div>-->
 </div>
